# FinanceTracking

./: .editorconfig  .gitignore  PROJECT_PLAN.md  README.md  build-installer.bat  build-installer.sh  package.json  pnpm-lock.yaml  run.ps1  run.sh  turbo.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
backend/: .env.example  build_sidecar.bat  build_sidecar.sh  financetracker.spec  pyinstaller_runtime_hook.py  pyproject.toml  sidecar_entry.py
backend/alembic/: env.py
backend/alembic/versions/: 8809e230b920_add_unique_constraint_holding_portfolio_.py  9ec39aff1e92_add_currency_to_holdings.py  abf5040f074b_add_asset_and_fno_position_tables.py  b388e46e4f03_initial_schema.py  c1f2a3b4d5e6_add_phone_telegram_and_password_resets.py  d2e3f4a5b6c7_add_fund_type_tax_settings_corp_actions.py  e3f4a5b6c7d8_add_totp_backup_codes.py
backend/app/: __init__.py  __main__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/brokers/: __init__.py  angel_one.py  base.py  fivepaisa.py  groww.py  icici_direct.py  upstox.py  zerodha.py
backend/app/ml/: __init__.py  anomaly_detector.py  backtester.py  llm_assistant.py  portfolio_optimizer.py  price_predictor.py  risk_calculator.py  sentiment_analyzer.py  technical_indicators.py
backend/app/models/: __init__.py  alert.py  app_settings.py  asset.py  broker_connection.py  chat_session.py  corporate_action.py  dividend.py  fno_position.py  forex_rates.py  goal.py  holding.py  mutual_fund.py  notification_log.py  password_reset.py  portfolio.py  price_history.py  tax_record.py  transaction.py  user.py  user_preferences.py  watchlist.py
backend/app/schemas/: __init__.py  alert.py  auth.py  broker.py  dividend.py  earnings.py  esg.py  fno.py  forex.py  goal.py  holding.py  market_data.py  mutual_fund.py  net_worth.py  portfolio.py  settings.py  tax.py  transaction.py  watchlist.py  whatif.py
backend/app/services/: account_aggregator.py  ai_context_service.py  alert_service.py  backup_service.py  benchmark_service.py  broker_service.py  cas_import_service.py  comparison_service.py  concentration_service.py  corporate_actions_service.py  csv_import_service.py  dividend_service.py  drift_service.py  earnings_service.py  economic_calendar_service.py  esg_service.py  excel_service.py  export_service.py  fire_service.py  fno_service.py  forex_service.py  freshness_service.py  goal_service.py  hedge_service.py  ipo_service.py  market_data_service.py  mutual_fund_service.py  net_worth_service.py  notification_service.py  ofx_qif_import_service.py  portfolio_service.py  recurring_detection_service.py  screener_service.py  sector_rotation_service.py  sheets_export_service.py  sip_calendar_service.py  stop_loss_service.py  tax_service.py  week52_service.py  whatif_service.py  (+1 more)
backend/app/tasks/: celery_app.py  check_alerts.py  fetch_prices.py  scheduler.py
backend/app/utils/: audit.py  rate_limiter.py  (+1 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  test_ai_context.py  test_alert_service.py  test_analytics_endpoints.py  test_analytics_services.py  test_auth.py  test_esg.py  test_fifo_tax.py  test_holdings.py  test_import_formats.py  test_ipo.py  test_net_worth.py  test_notification_service.py  test_phase4.py  test_phase5.py  test_phase6.py  test_portfolio.py  test_tax_advanced.py  test_websocket.py  test_whatif.py
(+187 files in other folders)
