[project]
name = "finance-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for FinanceTracker - personal investment portfolio tracking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    # Settings & validation
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "pyotp>=2.9.0",
    # Excel handling
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    # Market data
    "yfinance>=0.2.48",
    "pandas-ta>=0.3.14b1",
    # Numerical (used directly by ML modules)
    "numpy>=1.24.0",
    # HTTP client
    "httpx>=0.28.0",
    # Encryption
    "cryptography>=44.0.0",
    # Email
    "sendgrid>=6.11.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Scheduling (in-process fallback when Redis unavailable)
    "apscheduler>=3.10.4",
    # PDF export
    "xhtml2pdf>=0.2.16",
]

[project.optional-dependencies]
# Redis + Celery (optional - falls back to APScheduler if missing)
queue = [
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
]
# ML/AI features (optional)
ml = [
    "torch>=2.5.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.10.0",
    "transformers>=4.47.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
]
# LLM providers (all optional)
llm-ollama = ["langchain-ollama>=0.3.0"]
llm-openai = ["langchain-openai>=0.3.0"]
llm-anthropic = ["langchain-anthropic>=0.3.0"]
llm-google = ["langchain-google-genai>=2.0.0"]
# Mutual fund tools
mf = [
    "casparser>=0.8.0",
    "mftool>=2.7",
]
# Notifications
notifications = [
    "python-telegram-bot>=21.0",
    "twilio>=9.4.0",
]
# Development
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pyinstaller>=6.19.0",
]
# All optional dependencies
all = [
    "finance-tracker-backend[queue,ml,llm-ollama,llm-openai,llm-anthropic,llm-google,mf,notifications,dev]",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "B904", "B905", "RUF002", "RUF022", "SIM102"]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821"]  # SQLAlchemy deferred type annotations

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
